// Vitest Snapshot v1

exports[`New Adrs > should create a new one even if no config exists 1`] = `
"# 1. Example ADR

Date: 1992-01-12

## Status

Accepted

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
"
`;

exports[`New Adrs > should create a new one normally 1`] = `
"# 2. Example ADR

Date: 1992-01-12

## Status

Accepted

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
"
`;

exports[`New Adrs > should create a table of contents upon creation 1`] = `
"# Table of Contents

[1. Record architecture decisions](0001-record-architecture-decisions.md)
[2. Example ADR](0002-example-adr.md)"
`;
